--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -732,6 +732,7 @@ float: none;
   border: none;
   font-size:larger;
 }
+
 .dlt_icon2{
   color: green;
   background-color: white;
@@ -739,6 +740,7 @@ float: none;
   font-size:larger;
   margin-left: 0.5rem;
 }
+
 .dlt_icon3{
   color: blue;
   background-color: white;
@@ -746,6 +748,7 @@ float: none;
   font-size:larger;
   margin-left: 0.5rem;
 }
+
 .log-but{
   text-decoration: none;
   margin-left: 4em;
@@ -1168,4 +1171,20 @@ width: 15rem
 .colo3 {  
   display: flex;
   align-items: center;
+}
+.upload3 {
+  padding: 0.6rem 4rem;
+  border-radius: 20px;
+  border: none;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 226, 0);
+  font-weight: bold;
+  box-shadow: 3px 3px 1px 1px rgb(0, 255, 0);
+  justify-content: center;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.upload3:hover {
+  background-color: rgb(0, 255, 0);
 }
