--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1188,3 +1188,14 @@ width: 15rem
 .upload3:hover {
   background-color: rgb(0, 255, 0);
 }
+.btn2 {
+  padding: 5px 40px;
+  background-color: #06048c;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #06048c;
+}
+.btn2:hover {
+  background-color: #130fd7;
+  border: 1px solid #130fd7;
+}
