--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1096,10 +1096,13 @@ width: 15rem
   color:rgb(79, 255, 79);
 }
 .fb-icons2:hover {
-  color:#ff1f2f;
+  color:#4070b1;
+  background-color: white;
+
 }
 .fb-icons1:hover {
   color:white;
+  background-color: #0865ff;
 }
 .fild{
   display: flex;
@@ -1303,4 +1306,20 @@ width: 15rem
 
 .button_up:hover {
   background-color: #07830b;
+}
+.links {}
+.links:hover{
+  font-weight: bold;
+}
+.review_dlt {
+background-color: rgb(248, 22, 22);
+color: white;
+padding: 0.5rem 1rem;
+border-radius: 2rem;
+font-weight: bold;
+border: 2px solid rgb(163, 7, 7);
+}
+.review_dlt:hover{
+  background-color: rgb(1, 1, 157);
+  border: 2px solid rgb(29, 29, 252);
 }
